implement index and show for projects
