# public/swagger/open_api.json
@@ -28,6 +28,49 @@
   ],
   "paths": {
     "/api/v1/projects": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "summary": "",
+        "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "description": "",
+              "type": "object",
+              "properties": {}
+            },
+            "headers": {},
+            "examples": {
+              "application/json": {
+                "data": [
+                  {
+                    "id": 2,
+                    "title": "Project Title 1",
+                    "created_at": "2019-05-26T15:47:30.321Z"
+                  },
+                  {
+                    "id": 3,
+                    "title": "Project Title 2",
+                    "created_at": "2019-05-26T15:47:30.324Z"
+                  }
+                ]
+              }
+            }
+          }
+        },
+        "deprecated": false,
+        "security": []
+      },
       "post": {
         "tags": [
           "Projects"
@@ -81,7 +124,7 @@
                 "data": {
                   "id": 1,
                   "title": "Project Title 0",
-                  "created_at": "2019-05-16T22:17:20.738Z"
+                  "created_at": "2019-05-26T15:47:30.248Z"
                 }
               }
             }
@@ -98,12 +141,67 @@
               "application/json": {
                 "errors": {
                   "title": [
-                    "is missing",
-                    "size must be within 5 - 50"
+                    "is missing"
                   ]
                 }
               }
             }
+          }
+        },
+        "deprecated": false,
+        "security": []
+      }
+    },
+    "/api/v1/projects/{id}": {
+      "get": {
+        "tags": [
+          "Projects"
+        ],
+        "summary": "",
+        "description": "",
+        "consumes": [
+          "application/json"
+        ],
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "",
+            "required": true,
+            "type": "integer"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "description": "",
+              "type": "object",
+              "properties": {}
+            },
+            "headers": {},
+            "examples": {
+              "application/json": {
+                "data": {
+                  "id": 4,
+                  "title": "Project Title 3",
+                  "created_at": "2019-05-26T15:47:30.355Z"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Not found",
+            "schema": {
+              "description": "",
+              "type": "object",
+              "properties": {}
+            },
+            "headers": {},
+            "examples": {}
           }
         },
         "deprecated": false,
